@@ -3,6 +3,8 @@ package com.apptware.interview.stream;
 import static com.apptware.interview.stream.PaginationService.FULL_DATA_SIZE;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 import lombok.extern.slf4j.Slf4j;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -18,10 +20,10 @@ class ConsumptionOnDemandTest {
   @Test
   void testConsumptionOnDemand() {
     int limit = 1000;
-    List<String> limitedData = dataReader.fetchLimitadData(limit).toList();
+    List<String> limitedData = dataReader.fetchLimitadData(limit).collect(Collectors.toList());
     Assertions.assertThat(limitedData).hasSize(limit);
 
-    List<String> fullData = dataReader.fetchFullData().toList();
+    List<String> fullData = dataReader.fetchFullData().collect(Collectors.toList());
     Assertions.assertThat(fullData).hasSize(FULL_DATA_SIZE);
   }
 }
